# ascii-dream

./: .gitignore  README.md  benchmark_modal.py  generate_loading_screens.py  pyproject.toml  requirements.txt  run.py  run_tui.py  test_ascii_conversion.py  test_backend.py  test_generation_flow.py  test_tui_display.py
ascii_dream/: __init__.py  __main__.py  ascii_converter.py  modal_backend.py  queue.py  tui.py  tui_app.py
ascii_dream/cli/: __init__.py  main.py
ascii_dream/generation/: __init__.py  dream_frames.py  prompt_evolution.py
ascii_dream/rendering/: __init__.py  terminal_display.py
